crates/codira_codegen/src/snapshots/codira_codegen__test__assignment_op_i64.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign(a: i64, b: i64) -> i64 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: i64, b: i64) -> i64 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: i64, b: i64) -> i64 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: i64, b: i64) -> i64 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: i64, b: i64) -> i64 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: i64, b: i64) -> i64 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i64 @assign(i64 %0, i64 %1) {
body:
  ret i64 %1
}

define i64 @assign_add(i64 %0, i64 %1) {
body:
  %add = add i64 %0, %1
  ret i64 %add
}

define i64 @assign_subtract(i64 %0, i64 %1) {
body:
  %sub = sub i64 %0, %1
  ret i64 %sub
}

define i64 @assign_multiply(i64 %0, i64 %1) {
body:
  %mul = mul i64 %0, %1
  ret i64 %mul
}

define i64 @assign_divide(i64 %0, i64 %1) {
body:
  %div = sdiv i64 %0, %1
  ret i64 %div
}

define i64 @assign_remainder(i64 %0, i64 %1) {
body:
  %rem = srem i64 %0, %1
  ret i64 %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

