crates/codira_codegen/src/snapshots/codira_codegen__test__assignment_op_u16.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign(a: u16, b: u16) -> u16 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: u16, b: u16) -> u16 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: u16, b: u16) -> u16 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: u16, b: u16) -> u16 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: u16, b: u16) -> u16 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: u16, b: u16) -> u16 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i16 @assign(i16 %0, i16 %1) {
body:
  ret i16 %1
}

define i16 @assign_add(i16 %0, i16 %1) {
body:
  %add = add i16 %0, %1
  ret i16 %add
}

define i16 @assign_subtract(i16 %0, i16 %1) {
body:
  %sub = sub i16 %0, %1
  ret i16 %sub
}

define i16 @assign_multiply(i16 %0, i16 %1) {
body:
  %mul = mul i16 %0, %1
  ret i16 %mul
}

define i16 @assign_divide(i16 %0, i16 %1) {
body:
  %div = udiv i16 %0, %1
  ret i16 %div
}

define i16 @assign_remainder(i16 %0, i16 %1) {
body:
  %rem = urem i16 %0, %1
  ret i16 %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

